# gnrtest

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
gnrtest/: __init__.py  cli.py
gnrtest/analyzers/: model_parser.py  view_parser.py
gnrtest/core/: error_catalog.py  schema_builder.py
gnrtest/reporters/: console.py
gnrtest/validators/: base.py  model_validators.py  view_validators.py
