[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnrtest"
version = "0.1.0"
description = "Static analyzer for Genropy projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["genropy", "testing", "static-analysis", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
gnrtest = "gnrtest.cli:main"

[project.urls]
Homepage = "https://github.com/jakandre/gnrtest"
Repository = "https://github.com/jakandre/gnrtest"
Issues = "https://github.com/jakandre/gnrtest/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gnrtest*"]
